provider/deploy/deployment-provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider
  namespace: fclipboard
spec:
  selector:
    matchLabels:
      application: fclipboard
      component: provider
  template:
    metadata:
      labels:
        application: fclipboard
        component: provider
    spec:
      containers:
        - image: shoppon/fclipboard:latest
          name: provider
          # command: ["/bin/bash", "-c", "--"]
          # args: ["while true; do sleep 30; done;"]
          command:
            [
              "/usr/bin/python3",
              "/opt/fclipboard/subscription.py",
              "--config",
              "/opt/fclipboard/config.yaml",
            ]
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - mountPath: /opt/fclipboard/config.yaml
              name: config-file
      volumes:
        - name: config-file
          hostPath:
            path: /opt/fclipboard/config.yaml
            type: File
