provider/deploy/service-provider.yaml
apiVersion: v1
kind: Service
metadata:
  name: provider
  namespace: fclipboard
spec:
  type: ClusterIP
  ports:
    - name: fclipboard
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    application: fclipboard
    component: provider
